string resources were added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Walk Seller</string>
     <string name="sellers">Sellers</string>
     <string name="go_to_seller">Go to Seller</string>
+    <string name="my_location">My Location</string>
+    <string name="products">Products</string>
+    <string name="see_products">See Products</string>
 </resources>
