Order Details was implemented

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="my_location">My Location</string>
     <string name="products">Products</string>
     <string name="see_products">See Products</string>
+    <string name="see_details">See Details</string>
+    <string name="order_details">Order Details</string>
 </resources>
